just went through the process of simplifying and removing divs in order to reduce the height of the content? the box is too tall. what i did didn't fix it. i remember reading it somewhere..?

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,9 @@
 * {
-  /* box-sizing: border-box; */
-  /* border: 1px red solid; */
+  box-sizing: border-box;
+  border: 1px red solid;
   font-family: courier, monospace;
   font-weight: 700;
+  text-align: center;
 }
 
 .navbar  {
@@ -10,44 +11,48 @@
   display: flex;
   justify-content: space-between;
   padding: 5px;
+  /* height: 50px; */
+  
 }
 
-ul.links {
+ul {
   display: flex;
   padding: 3px;
   justify-content: space-evenly;
-  /* align-items: center; */
+  align-items: center;
   /* this removes the dots on the list items*/
   list-style-type: none;
   margin: auto;
+  gap: 10px;
+  flex: auto;
+}
+
+ul.nav-left {
+  margin-left: 0;
+}
+ul.nav-right {
+  margin-right: 0;
 }
 a {
-  font-size: 12px;
+  font-size: 16px;
   background: white;
-  padding: 8px;
+  /* padding: 8px; */
   /* this removes the line under the links */
   text-decoration: none;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-evenly;
-
-}
-
-.nav-left {
-    flex-grow: 2;
-}
-
-.logo {
-  font-size: 2em;
-  flex-grow: 1;
+h1.logo {
+  /* font-size: 1.5em; */
+  /* font-weight: 700; */
+  /* flex-grow: 1; */
   background-color: white;
+  color: red;
+  flex: initial;
+  
+  /* padding: 5px; */
+  
 }
 
-.nav-right {
-  flex-grow: 2;
-}
 
 
 
